# spotify-rmlui

./: .gitmodules  CMakeLists.txt  main.cpp  readme.md
.github/workflows/: linux.yml
impl/sdl/: SystemInterface.hpp
res/: icons
res/rcss/: _colors.scss  compile_all  globals.rcss  globals.scss  left-sidepanel.rcss  left-sidepanel.scss  menu.rcss  menu.scss  readme.md  rml.rcss  toolbar.rcss  toolbar.scss  window.rcss  window.scss
res/rml/: index.rml  left-sidepanel.rml  toolbar.rml
shell/sdl/: RenderInterface.hpp  SystemInterface.hpp
src/: CMakeLists.txt  main.cpp
